--- a/style.css
+++ b/style.css
@@ -1,98 +1,112 @@
-*{
+* {
     margin: 0;
-    padding:0;
+    padding: 0;
     box-sizing: border-box;
     /*TO Box Model  */
 }
 
 /* Global */
-body{
-font-family:"Merriweather" ;
-background: #ebf2ff;
+
+body {
+    font-family: "Merriweather";
+    background: #ebf2ff;
 }
 
-.button__primary{
-     background-image:linear-gradient(
-    to right,
-    #ff512f 0%,
-    #dd2476 51%,
-    #ff512f 100%
-    );
+.button__primary {
+    background-image: linear-gradient( to right, #ff512f 0%, #dd2476 51%, #ff512f 100%);
     color: #ebf2ff;
     padding: 11px;
     border: none;
     border-radius: 8px;
+    cursor: pointer;
 }
 
-.container{
-     width:100%; 
-     padding: 0 15px;
-     margin: 0 auto;
+.container {
+    width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 
-  
-
-.navbar{
+.navbar {
     display: flex;
     justify-content: space-around;
     align-items: center;
-
 }
 
-.navbar__brand{
- width:100px;   
+.navbar__brand {
+    width: 100px;
 }
 
-.navbar__logo{
+.navbar__logo {
     width: 100%;
 }
 
-.hero__container{
-    width: 100%;
-
-}
-
-.hero__image__container{
+.hero__container {
     width: 100%;
 }
 
-.hero__image{
-     width:100%;
- }
-
-
-@media (min-width:768px)  /* For table devices    */
-{
-    .navbar{
-    justify-content: space-between;
-    padding: 10px 20px;
- }
-.navbar__brand{
-    width: 150px;
- }
-.button__primary{
-    padding:20px;
-    font-size: 25px; 
- }
-.hero__container{
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content:space-between ;
-gap: 10px;
- } 
-}
-
-@media (min-width: 1020px)
-{
-
-    .container{
-max-width: 1010px;
-
-    }
 .hero__image__container {
-    width: 500px;
-    height: 500px;
-}
+    width: 100%;
 }
 
+.hero__image {
+    width: 100%;
+}
+
+.hero__text {
+    font-size: 30px;
+    margin: 20px 0;
+    color: #1d3557;
+}
+
+/* Hero menu */
+.food__menu__card{
+    width: 100%;
+}
+
+.food__image{
+    width: 100%;
+}
+
+
+
+
+
+@media (min-width:768px)
+/* For table devices    */
+
+    {
+    .navbar {
+        justify-content: space-between;
+        padding: 10px 20px;
+    }
+    .navbar__brand {
+        width: 150px;
+    }
+    .button__primary {
+        padding: 12px 20px;
+        font-size: 25px;
+    }
+    .hero__container {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+    }
+}
+
+@media (min-width: 1020px) {
+    .container {
+        max-width: 900px;
+    }
+    .hero__text {
+        font-size: 50px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .container {
+        max-width: 1250px;
+    }
+}
