--- a/style.css
+++ b/style.css
@@ -93,6 +93,42 @@ body {
     justify-content: center;
 }
 
+/* flex */
+
+.restaurants__description {
+    text-align: center;
+    font-size: 30px;
+    margin: 20px 0;
+    color: #1d3557;
+}
+
+.restaurants__flex__row__one, .restaurants__flex__row__two {
+    width: 100%;
+    display: flex;
+    gap: 4px;
+}
+
+.restaurants__flex__row__one {
+    align-items: baseline;
+    margin-bottom: 4px;
+}
+
+.restaurant__1__image, .restaurant__2__image, .restaurant__3__image, .restaurant__4__image {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+
+.restaurant__1, .restaurant__4 {
+    width: 100%;
+    height: 150px;
+}
+
+.restaurant__2, .restaurant__3 {
+    width: 120%;
+    height: 200px;
+}
+
 @media (min-width:768px) {
     /* For table devices    */
     .navbar {
@@ -135,22 +171,52 @@ body {
         margin-top: -20px;
         margin-bottom: 30px;
     }
+    .restaurants__description {
+        font-size: 40px;
+        width: 100%;
+    }
+    .restaurants__container {
+        display: flex;
+        align-items: center;
+    }
+
+    .restaurants__flex{
+        width: 100%;
+    }
+
+
+
+
 }
+
+
+
+
+
 
 @media (min-width: 1200px) {
     .container {
-        max-width: 1200px;
+        max-width: 1140px;
     }
     .hero__text {
         font-size: 50px;
     }
     .explore__menu__lists {
         gap: 20px;
-        padding: 0 20px ;
+        padding: 0 20px;
     }
-    .explore__menu__text{
+    .explore__menu__text {
         font-size: 50px;
     }
+
+ .restaurants__container{
+     margin-top: 40px;
+ }
+
+
+
+
+
     .explore__menu__gradient__bg {
         position: absolute;
         left: 0;
