--- a/style.css
+++ b/style.css
@@ -10,27 +10,94 @@
 body {
     font-family: "Merriweather";
     background: #ebf2ff;
+    overflow-x: hidden;
+    transition: 1.3s;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+section {
+    margin: 4rem 0;
 }
 
 .button__primary {
     background-image: linear-gradient( to right, #ff512f 0%, #dd2476 51%, #ff512f 100%);
     color: #ebf2ff;
-    padding: 11px;
-    border: none;
+    margin: 10px;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    text-transform: capitalize;
+    transition: 1s;
+    font-weight: 600;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px, #eee;
     border-radius: 8px;
     cursor: pointer;
+    border: none;
+}
+
+.botton__primary:hover {
+    background-position: right center;
+    color: #fff;
+    text-decoration: none;
 }
 
 .container {
     width: 100%;
-    padding: 0 15px;
-    margin: 0 auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .navbar {
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: white;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    z-index: 9999;
+}
+
+.video__footage__container {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.video__footage {
+    position: relative;
+}
+
+.video__footage::before {
+    background-image: linear-gradient( to right, #ff512f 0%, #dd2476 51%, #ff512f 100%);
+    content: "";
+    top: 0;
+    left: 0;
+    position: absolute;
+    transform: translate(1rem, 1rem);
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
+
+.video__footage__text {
+    margin-top: 2rem;
+    color: #1d3557;
+    font-size: 1.25rem;
+    font-weight: 300;
+    text-align: center;
+    ;
 }
 
 .navbar__brand {
@@ -57,6 +124,28 @@ body {
     font-size: 30px;
     margin: 20px 0;
     color: #1d3557;
+}
+
+.email__subcribe__container {
+    margin-top: 3rem;
+    width: 100%;
+    padding: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.email__subcribe__input__field {
+    display: flex;
+    align-items: center;
+}
+
+.email__input {
+    border: 1px solid #ee89a0;
+    background-color: #fcedf0;
+    color: black;
+    font-weight: 700;
+    padding: 0.5rem;
+    border-radius: 4px;
 }
 
 /*  Menu Style */
@@ -129,6 +218,51 @@ body {
     height: 200px;
 }
 
+/* footer style*/
+
+footer>img {
+    width: 300px;
+    filter: brightness(0) invert(1);
+}
+
+footer>ul {
+    margin-top: -1rem;
+    color: #fff;
+}
+
+footer>ul>li {
+    margin: 5px 0;
+}
+
+.quote__container {
+    position: relative;
+    margin-top: 4rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 200px;
+    width: 100%;
+    border-radius: 13px ;
+    background: url("https://images.unsplash.com/photo-1522336572468-97b06e8ef143?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=755&q=80") center center / cover no-repeat;
+}
+
+.quote_image_overlay {
+    position: absolute;
+    height: 200px;
+    width: 100%;
+    border-radius: 13px;
+    background-color: #0a4065;
+    opacity: 49%;
+}
+
+.quote_image_text {
+    color: #fff;
+    z-index: 3;
+    margin: 0 1rem;
+    text-align: center;
+}
+
 @media (min-width:768px) {
     /* For table devices    */
     .navbar {
@@ -151,6 +285,10 @@ body {
     }
     .explore__menu__container {
         position: relative;
+    }
+    .email__text{
+        font-size: 1.875rem;
+    line-height: 2.25rem;
     }
     .explore__menu__gradient__bg {
         position: absolute;
@@ -179,20 +317,19 @@ body {
         display: flex;
         align-items: center;
     }
-
-    .restaurants__flex{
+    .restaurants__flex {
         width: 100%;
     }
-
-
-
-
+    footer {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding-top: 30px;
+    border-radius: 10px 10px 0 0;
+        background-image: linear-gradient( to right, #ff512f 0%, #dd2476 51%, #ff512f 100%);
+    }
 }
-
-
-
-
-
 
 @media (min-width: 1200px) {
     .container {
@@ -208,15 +345,9 @@ body {
     .explore__menu__text {
         font-size: 50px;
     }
-
- .restaurants__container{
-     margin-top: 40px;
- }
-
-
-
-
-
+    .restaurants__container {
+        margin-top: 40px;
+    }
     .explore__menu__gradient__bg {
         position: absolute;
         left: 0;
